@@ -1,6 +1,10 @@
 # ChangeLog for net-irc/kmyirc
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/net-irc/kmyirc/ChangeLog,v 1.2 2002/10/11 08:02:25 shermann Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/net-irc/kmyirc/ChangeLog,v 1.3 2003/02/10 12:45:01 shermann Exp $
+
+*kmyirc-0.2.8 (10 Feb 2003)
+
+  10 Feb 2003; Stephan Hermann <sh@sourcecode.de>: Version Bump 0.2.8 release
 
 *kmyirc-0.2.7 (11 Oct 2002)
 
